# TopicVelo

./:  .pypirc.txt  .gitignore  LICENSE.txt  README.md  README_pypi.txt  environment.yaml  environment.yml  gitignore.txt  pyproject.toml  topicVelo_env.yml
Example/: FastTopics_scNT_HH.Rmd  scNT_HH_TopicVelo.ipynb
TopicVelo/: DistPlots.py  EmbedPlots.py  InferenceTools.py  TM_Utils.py  TranscriptionSimulation.py  TransitionMatrix.py  vel_eval_utils.py
notebooks/tutorial/: scNTseq_FastTopics.Rmd  scNTseq_TopicVelo_tutorial.ipynb
topicvelo/: dist_pl.py  embed_pl.py  inference_tools.py  tm_utils.py  transcription_simulation.py  transition_matrix.py  vel_eval_utils.py
tutorial/: scNTseq_TopicVelo_tutorial.ipynb
